--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=VaccineNation
 Spring.datasource.url=jdbc:mysql://localhost:3306/vaccineNation?createTableIfNoExist=true
 Spring.datasource.username=root
 Spring.datasource.password=Prem@9910
-Spring.jpa.hibernate.ddl-auto=update
+Spring.jpa.hibernate.ddl-auto=create
